Added in database id

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -25,7 +25,7 @@
     {
       "binding": "DB",
       "database_name": "blog",
-      "database_id": ""
+      "database_id": "ecf6f98e-4d95-446a-a1eb-e7d4a9b95d4f"
     }
   ],
   // "ai": {
